# VoMPE_source

./: CMakeLists.txt  README.md
resource/: VoMPE.uidesc  win32resource.aps
source/: VM1_3downsampler.h  VMFFT.h  VMLPC.h  VMMIDI.cpp  VMMIDI.h  VMView.h  VMViewcreator.cpp  VMcids.h  VMconfig.h  VMcontroller.cpp  VMcontroller.h  VMentry.cpp  VMextparam.h  VMparam.h  VMprocessor.cpp  VMprocessor.h  VMvst3editor.h  version.h
